--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jquery": "3.2.5",
     "bootstrap-sass": "3.3.7",
     "browserify": "14.4.0",
+    "command-line-args": "4.0.6",
     "concat-cli": "4.0.0",
     "convict": "4.0.0",
     "cpy-cli": "1.0.1",
@@ -38,6 +39,7 @@
     "html-minifier": "3.5.2",
     "jquery": "3.2.1",
     "jsonfile": "3.0.0",
+    "lodash": "4.17.4",
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "node-rev": "2.0.0",
@@ -45,7 +47,6 @@
     "npm-run-all": "4.0.2",
     "npmversion": "1.3.4",
     "postbuild": "2.0.0",
-    "render-cli": "0.3.2",
     "rimraf": "2.6.1",
     "rollup": "0.43.0",
     "rollup-plugin-commonjs": "8.0.2",
@@ -80,11 +81,11 @@
     "build:sass": "node-sass tmp/ --output tmp/ --output-style compressed --source-map true --omit-source-map-url",
     "build:config-2-json": "node config/config.2.json.js",
     "build:render": "npm-run-all build:render:*",
-    "build:render:index": "render tmp/index.html --context config/config.json --engine lodash --output tmp/index.html",
-    "build:render:exclude": "render tmp/exclude.html --context config/config.json --engine lodash --output tmp/exclude.html",
-    "build:render:sitemap": "render tmp/sitemap.xml --context config/config.json --engine lodash --output tmp/sitemap.xml",
-    "build:render:footer": "render tmp/footer/components/footer.htm --context config/config.json --engine lodash --output tmp/footer/components/footer.htm",
-    "build:render:google-analytics": "render tmp/assets/js/google-analytics.js --context config/config.json --engine lodash --output tmp/assets/js/google-analytics.js",
+    "build:render:index": "node tools/compile --source tmp/index.html --context config/config.json --output tmp/index.html",
+    "build:render:exclude": "node tools/compile --source tmp/exclude.html --context config/config.json --output tmp/exclude.html",
+    "build:render:sitemap": "node tools/compile --source tmp/sitemap.xml --context config/config.json --output tmp/sitemap.xml",
+    "build:render:footer": "node tools/compile --source tmp/footer/components/footer.htm --context config/config.json --output tmp/footer/components/footer.htm",
+    "build:render:google-analytics": "node tools/compile --source tmp/assets/js/google-analytics.js --context config/config.json --output tmp/assets/js/google-analytics.js",
     "build:html-min-templates": "html-minifier --case-sensitive --collapse-whitespace --remove-comments --minify-css --minify-js --input-dir tmp --output-dir tmp --file-ext htm",
     "build:angular-compile": "ngc -p tsconfig.ngc.json",
     "build:typescript-compile": "tsc -p tsconfig.tsc.json",
