--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "4.2.5",
     "@angular/platform-browser-dynamic": "4.2.5",
     "core-js": "2.4.1",
-    "rxjs": "5.4.1",
+    "rxjs": "5.4.2",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
@@ -28,7 +28,9 @@
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.34",
     "@types/googlemaps": "3.26.14",
-    "@types/jquery": "3.2.5",
+    "@types/jquery": "3.2.6",
+    "babel-cli": "6.24.1",
+    "babel-preset-es2015": "6.24.1",
     "bootstrap-sass": "3.3.7",
     "browserify": "14.4.0",
     "command-line-args": "4.0.6",
@@ -38,7 +40,7 @@
     "dateformat": "2.0.0",
     "html-minifier": "3.5.2",
     "jquery": "3.2.1",
-    "jsonfile": "3.0.0",
+    "jsonfile": "3.0.1",
     "lodash": "4.17.4",
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
@@ -51,9 +53,9 @@
     "rollup": "0.43.0",
     "rollup-plugin-commonjs": "8.0.2",
     "rollup-plugin-node-resolve": "3.0.0",
-    "tslint": "5.4.3",
+    "tslint": "5.5.0",
     "typedoc": "0.7.1",
-    "typescript": "2.3.4",
+    "typescript": "2.5.0-dev.20170629",
     "uglify-js": "3.0.23"
   },
   "scripts": {
@@ -90,7 +92,7 @@
     "build:angular-compile": "ngc -p tsconfig.ngc.json",
     "build:typescript-compile": "tsc -p tsconfig.tsc.json",
     "build:rollup": "rollup -f iife -c rollup.config.js -o compiled/bundle.es2015.js",
-    "build:es5": "tsc --target es5 --allowJs true compiled/bundle.es2015.js --out compiled/bundle.es5.js",
+    "build:es5": "babel compiled/bundle.es2015.js --presets=es2015 --out-file compiled/bundle.es5.js",
     "build:concat-js": "concat-cli -f node_modules/jquery/dist/jquery.min.js node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js tmp/assets/js/modernizr.custom.js tmp/assets/js/jquery.gridrotator.js tmp/assets/js/stick.up.js tmp/assets/js/jquery.easypiechart.js tmp/assets/js/google-analytics.js tmp/assets/js/pre-render.js -o compiled/bundle.deps.js",
     "build:concat-css": "concat-cli -f tmp/assets/css/layout.css -o compiled/common.min.css",
     "build:minify": "npm-run-all build:minify:*",
