--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "rimraf": "2.6.1",
     "rollup": "0.45.1",
     "rollup-plugin-commonjs": "8.0.2",
-    "rollup-plugin-node-resolve": "3.0.0",
+    "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.5.0",
     "typedoc": "0.7.1",
     "typescript": "2.5.0-dev.20170707",
@@ -97,8 +97,8 @@
     "build:concat-js": "concat-cli -f node_modules/jquery/dist/jquery.min.js node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js tmp/assets/js/modernizr.custom.js tmp/assets/js/jquery.gridrotator.js tmp/assets/js/stick.up.js tmp/assets/js/jquery.easypiechart.js tmp/assets/js/google-analytics.js tmp/assets/js/pre-render.js -o compiled/bundle.deps.js",
     "build:concat-css": "concat-cli -f tmp/assets/css/layout.css -o compiled/common.min.css",
     "build:minify": "npm-run-all build:minify:*",
-    "build:minify:bundle-deps": "uglifyjs compiled/bundle.deps.js --screw-ie8 --compress --mangle --comments --output compiled/bundle.deps.min.js",
-    "build:minify:bunlde": "uglifyjs compiled/bundle.es5.js --screw-ie8 --compress --mangle --comments --output compiled/bundle.es5.min.js",
+    "build:minify:bundle-deps": "uglifyjs compiled/bundle.deps.js --screw-ie8 --compress properties,dead_code,conditionals,unused,join_vars --mangle toplevel --comments --output compiled/bundle.deps.min.js",
+    "build:minify:bundle-es5": "uglifyjs compiled/bundle.es5.js --screw-ie8 --compress properties,dead_code,conditionals,unused,join_vars --mangle toplevel --comments --output compiled/bundle.es5.min.js",
     "build:rev": "npm-run-all build:rev:*",
     "build:rev:js": "nodeRev 'compiled/*.min.js' --hash -o dist/js",
     "build:rev:css": "nodeRev 'compiled/common.min.css' --hash -o dist/css",
