--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@angular/common": "4.3.0",
-    "@angular/core": "4.3.0",
-    "@angular/forms": "4.3.0",
-    "@angular/http": "4.3.0",
-    "@angular/platform-browser": "4.3.0",
-    "@angular/platform-browser-dynamic": "4.3.0",
+    "@angular/common": "4.3.1",
+    "@angular/core": "4.3.1",
+    "@angular/forms": "4.3.1",
+    "@angular/http": "4.3.1",
+    "@angular/platform-browser": "4.3.1",
+    "@angular/platform-browser-dynamic": "4.3.1",
     "core-js": "2.4.1",
     "rxjs": "5.4.2",
-    "zone.js": "0.8.13"
+    "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/compiler": "4.3.0",
-    "@angular/compiler-cli": "4.3.0",
+    "@angular/compiler": "4.3.1",
+    "@angular/compiler-cli": "4.3.1",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.34",
     "@types/googlemaps": "3.26.16",
-    "@types/jquery": "3.2.8",
+    "@types/jquery": "3.2.9",
     "babel-cli": "6.24.1",
     "babel-preset-es2015": "6.24.1",
     "bootstrap-sass": "3.3.7",
@@ -55,8 +55,8 @@
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.5.0",
     "typedoc": "0.7.1",
-    "typescript": "2.5.0-dev.20170712",
-    "uglify-js": "3.0.24"
+    "typescript": "2.4.2",
+    "uglify-js": "3.0.25"
   },
   "scripts": {
     "postinstall": "npm prune",
