--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "4.9.13",
+  "version": "4.9.14",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "license": "MIT",
@@ -12,24 +12,24 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@angular/common": "4.3.4",
-    "@angular/core": "4.3.4",
-    "@angular/forms": "4.3.4",
-    "@angular/http": "4.3.4",
-    "@angular/platform-browser": "4.3.4",
-    "@angular/platform-browser-dynamic": "4.3.4",
+    "@angular/common": "4.3.5",
+    "@angular/core": "4.3.5",
+    "@angular/forms": "4.3.5",
+    "@angular/http": "4.3.5",
+    "@angular/platform-browser": "4.3.5",
+    "@angular/platform-browser-dynamic": "4.3.5",
     "core-js": "2.5.0",
     "rxjs": "5.4.3",
     "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler": "4.3.4",
-    "@angular/compiler-cli": "4.3.4",
+    "@angular/compiler": "4.3.5",
+    "@angular/compiler-cli": "4.3.5",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.34",
-    "@types/googlemaps": "3.26.17",
+    "@types/googlemaps": "3.26.19",
     "@types/jquery": "3.2.11",
-    "babel-cli": "6.24.1",
+    "babel-cli": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "bootstrap-sass": "3.3.7",
     "browserify": "14.4.0",
@@ -50,7 +50,7 @@
     "npmversion": "1.4.0",
     "postbuild": "2.0.0",
     "rimraf": "2.6.1",
-    "rollup": "0.46.2",
+    "rollup": "0.47.5",
     "rollup-plugin-commonjs": "8.1.0",
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.6.0",
@@ -59,6 +59,7 @@
     "uglify-js": "3.0.27"
   },
   "scripts": {
+    "ncu:update": "ncu -u && npm update && npm update -D",
     "postinstall": "npm prune",
     "reinstall": "npm cache clean && rimraf node_modules/* && npm install",
     "clean": "npm-run-all clean:*",
