--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ouq77-portfolio",
   "author": "ouq77",
-  "version": "4.9.13",
+  "version": "4.9.14",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "main": "server/server.js",
   "repository": {
@@ -31,7 +31,7 @@
     "helmet-csp": "2.5.1",
     "hpkp": "2.0.0",
     "hsts": "2.1.0",
-    "netjet": "1.1.3",
+    "netjet": "1.1.4",
     "node-fetch": "1.7.2",
     "nodemailer": "4.0.1",
     "ord": "0.1.1",
@@ -44,6 +44,7 @@
     "standard": "10.0.3"
   },
   "scripts": {
+    "ncu:update": "ncu -u && npm update && npm update -D",
     "start": "standard && node server/start.js"
   }
 }
