--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "camelcase": "4.1.0",
     "compression": "1.7.1",
     "convict": "4.0.1",
+    "debug": "3.1.0",
     "express": "4.16.1",
     "express-cache-headers": "0.1.3",
     "express-user-agent-blocker": "1.4.0",
