--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "4.9.22",
+  "version": "4.10.0",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "license": "MIT",
@@ -27,10 +27,10 @@
     "@angular/compiler-cli": "4.4.4",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.35",
-    "@types/googlemaps": "3.29.0",
-    "@types/jquery": "3.2.12",
+    "@types/googlemaps": "3.29.2",
+    "@types/jquery": "3.2.13",
     "babel-cli": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-env": "1.6.0",
     "bootstrap-sass": "3.3.7",
     "browserify": "14.4.0",
     "command-line-args": "4.0.7",
@@ -54,7 +54,7 @@
     "rollup-plugin-commonjs": "8.2.1",
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.7.0",
-    "typedoc": "0.8.0",
+    "typedoc": "0.9.0",
     "typescript": "2.5.3",
     "uglify-js": "3.1.3"
   },
@@ -77,7 +77,7 @@
     "heroku:clean:files": "rimraf heroku/app/*.html heroku/app/*.ico heroku/app/*.json heroku/app/*.txt heroku/app/*.xml",
     "heroku:docs": "npm-run-all heroku:docs:*",
     "heroku:docs:clean": "rimraf heroku/app/docs/*",
-    "heroku:docs:compile": "typedoc --out heroku/app/docs/ src/ --target es6 --excludePrivate true --excludeExternals true --includeDeclarations false -experimentalDecorators true -ignoreCompilerErrors false --json heroku/app/docs/data/docs.json --name 'Louw Swart // Portfolio'",
+    "heroku:docs:compile": "typedoc --target es6 --excludeNotExported --excludePrivate --excludeExternals --json heroku/app/docs/data/docs.json --name 'Louw Swart // Portfolio' --out heroku/app/docs/ src/",
     "build": "npm-run-all clean build:*",
     "build:lint": "tslint --config tslint.json --format stylish 'src/**/*.ts'",
     "build:setup": "ncp src/ tmp/ && ncp tools/ngfactory/ tmp/",
@@ -94,7 +94,7 @@
     "build:typescript-compile": "tsc -p tsconfig.tsc.json",
     "build:rollup": "rollup -f iife -c rollup.config.js -o compiled/bundle.es2015.js",
     "#build:es5": "tsc --target es5 --allowJs true compiled/bundle.es2015.js --out compiled/bundle.es5.js",
-    "build:es5": "babel compiled/bundle.es2015.js --presets=es2015 --out-file compiled/bundle.es5.js",
+    "build:es5": "babel compiled/bundle.es2015.js --presets=env --out-file compiled/bundle.es5.js",
     "build:concat-js": "concat-cli -f node_modules/jquery/dist/jquery.min.js node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js tmp/assets/js/modernizr.custom.js tmp/assets/js/jquery.gridrotator.js tmp/assets/js/stick.up.js tmp/assets/js/jquery.easypiechart.js tmp/assets/js/google-analytics.js tmp/assets/js/pre-render.js -o compiled/bundle.deps.js",
     "build:concat-css": "concat-cli -f tmp/assets/css/layout.css -o compiled/common.min.css",
     "build:minify": "npm-run-all build:minify:*",
