Upgraded to angular@5

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ src/**/*.metadata.json
 src/**/*.ngfactory.ts
 src/**/*.ngstyle.ts
 src/**/*.js.map
+tools/**/*.ngsummary.json
 tools/**/*.js
 tools/**/*.js.map
 !tools/compile.js
