--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@angular/common": "4.4.6",
-    "@angular/core": "4.4.6",
-    "@angular/forms": "4.4.6",
-    "@angular/http": "4.4.6",
-    "@angular/platform-browser": "4.4.6",
-    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/common": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
     "core-js": "2.5.1",
     "rxjs": "5.5.2",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/compiler": "4.4.6",
-    "@angular/compiler-cli": "4.4.6",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.35",
     "@types/googlemaps": "3.29.2",
@@ -55,7 +55,7 @@
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.8.0",
     "typedoc": "0.9.0",
-    "typescript": "2.5.3",
+    "typescript": "2.6.1",
     "uglify-js": "3.1.6"
   },
   "scripts": {
@@ -79,7 +79,7 @@
     "heroku:docs:clean": "rimraf heroku/app/docs/*",
     "heroku:docs:compile": "typedoc --target es6 --excludeNotExported --excludePrivate --excludeExternals --json heroku/app/docs/data/docs.json --name 'Louw Swart // Portfolio' --out heroku/app/docs/ src/",
     "build": "npm-run-all clean build:*",
-    "build:lint": "tslint --config tslint.json --format stylish 'src/**/*.ts'",
+    "build:lint": "tslint --config tslint.json --format stylish 'src/**/*.ts' --project .",
     "build:setup": "ncp src/ tmp/ && ncp tools/ngfactory/ tmp/",
     "build:sass": "node-sass tmp/ --output tmp/ --output-style compressed --source-map true --omit-source-map-url",
     "build:config-2-json": "node config/config.2.json.js",
