--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "ouq77-portfolio",
   "author": "ouq77",
-  "version": "4.10.4",
+  "version": "5.0.0",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "main": "server/server.js",
   "repository": {
     "url": "https://github.com/ouq77/portfolio-web"
   },
   "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+    "node": "9",
+    "npm": "5"
   },
   "standard": {
     "ignore": [
