--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "lib": [
+      "es6",
+      "es2015",
+      "dom"
+    ],
     "module": "es2015",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -33,6 +38,6 @@
   ],
   "include": [
     "src/",
-    "tools/manual_typings/jquery.plugins.d.ts"
+    "tools/manual_typings/index.d.ts"
   ]
 }
