--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "5.0.10",
+  "version": "5.0.11",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "license": "MIT",
@@ -12,28 +12,28 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@angular/common": "5.1.3",
-    "@angular/core": "5.1.3",
-    "@angular/forms": "5.1.3",
-    "@angular/http": "5.1.3",
-    "@angular/platform-browser": "5.1.3",
-    "@angular/platform-browser-dynamic": "5.1.3",
+    "@angular/common": "5.2.1",
+    "@angular/core": "5.2.1",
+    "@angular/forms": "5.2.1",
+    "@angular/http": "5.2.1",
+    "@angular/platform-browser": "5.2.1",
+    "@angular/platform-browser-dynamic": "5.2.1",
     "core-js": "2.5.3",
     "rxjs": "5.5.6",
-    "zone.js": "0.8.19"
+    "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/compiler": "5.1.3",
-    "@angular/compiler-cli": "5.1.3",
+    "@angular/compiler": "5.2.1",
+    "@angular/compiler-cli": "5.2.1",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.35",
     "@types/googlemaps": "3.30.4",
-    "@types/jquery": "3.2.17",
+    "@types/jquery": "3.2.18",
     "babel-cli": "6.26.0",
     "babel-preset-env": "1.6.1",
     "bootstrap-sass": "3.3.7",
-    "browserify": "15.0.0",
-    "command-line-args": "4.0.7",
+    "browserify": "15.2.0",
+    "command-line-args": "5.0.0",
     "concat-cli": "4.0.0",
     "convict": "4.0.2",
     "cpy-cli": "1.0.1",
@@ -47,16 +47,16 @@
     "node-rev": "2.0.0",
     "node-sass": "4.7.2",
     "npm-run-all": "4.1.2",
-    "npmversion": "1.4.0",
+    "npmversion": "1.6.1",
     "postbuild": "2.1.0",
     "rimraf": "2.6.2",
-    "rollup": "0.53.3",
+    "rollup": "0.54.1",
     "rollup-plugin-commonjs": "8.2.6",
     "rollup-plugin-node-resolve-angular": "2.0.3",
-    "tslint": "5.8.0",
+    "tslint": "5.9.1",
     "typedoc": "0.9.0",
     "typescript": "2.6.2",
-    "uglify-js": "3.3.4"
+    "uglify-js": "3.3.7"
   },
   "scripts": {
     "ncu:update": "ncu -u && npm update && npm update -D",
@@ -115,8 +115,8 @@
     "bump:major:src": "npmversion --increment major",
     "bump:minor:src": "npmversion --increment minor",
     "bump:patch:src": "npmversion --increment patch",
-    "bump:major:heroku": "cd heroku && npmversion --increment major --nogit-tag && cd ..",
-    "bump:minor:heroku": "cd heroku && npmversion --increment minor --nogit-tag && cd ..",
-    "bump:patch:heroku": "cd heroku && npmversion --increment patch --nogit-tag && cd .."
+    "bump:major:heroku": "cd heroku && npmversion --increment major --nogit-tag",
+    "bump:minor:heroku": "cd heroku && npmversion --increment minor --nogit-tag",
+    "bump:patch:heroku": "cd heroku && npmversion --increment patch --nogit-tag"
   }
 }
