Switched to compodoc

--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@angular/common": "5.2.2",
-    "@angular/core": "5.2.2",
-    "@angular/forms": "5.2.2",
-    "@angular/http": "5.2.2",
-    "@angular/platform-browser": "5.2.2",
-    "@angular/platform-browser-dynamic": "5.2.2",
+    "@angular/common": "5.2.3",
+    "@angular/core": "5.2.3",
+    "@angular/forms": "5.2.3",
+    "@angular/http": "5.2.3",
+    "@angular/platform-browser": "5.2.3",
+    "@angular/platform-browser-dynamic": "5.2.3",
     "core-js": "2.5.3",
     "rxjs": "5.5.6",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/compiler": "5.2.2",
-    "@angular/compiler-cli": "5.2.2",
+    "@angular/compiler": "5.2.3",
+    "@angular/compiler-cli": "5.2.3",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.35",
     "@types/googlemaps": "3.30.5",
@@ -34,6 +34,7 @@
     "bootstrap-sass": "3.3.7",
     "browserify": "15.2.0",
     "command-line-args": "5.0.1",
+    "compodoc": "0.0.41",
     "concat-cli": "4.0.0",
     "convict": "4.0.2",
     "cpy-cli": "1.0.1",
@@ -50,13 +51,12 @@
     "npmversion": "1.6.1",
     "postbuild": "2.1.0",
     "rimraf": "2.6.2",
-    "rollup": "0.55.1",
+    "rollup": "0.55.3",
     "rollup-plugin-commonjs": "8.3.0",
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.9.1",
-    "typedoc": "0.9.0",
-    "typescript": "2.6.2",
-    "uglify-js": "3.3.8"
+    "typescript": "2.7.1",
+    "uglify-js": "3.3.9"
   },
   "scripts": {
     "ncu:update": "ncu -u && npm update && npm update -D",
@@ -77,7 +77,7 @@
     "heroku:clean:files": "rimraf heroku/app/*.html heroku/app/*.ico heroku/app/*.json heroku/app/*.txt heroku/app/*.xml",
     "heroku:docs": "npm-run-all heroku:docs:*",
     "heroku:docs:clean": "rimraf heroku/app/docs/*",
-    "heroku:docs:compile": "typedoc --target es6 --excludeNotExported --excludePrivate --excludeExternals --json heroku/app/docs/data/docs.json --name 'Louw Swart // Portfolio' --out heroku/app/docs/ src/",
+    "heroku:docs:compile": "compodoc --tsconfig tsconfig.json --theme laravel --silent --name 'Louw Swart // Portfolio' --output heroku/app/docs/",
     "build": "npm-run-all clean build:*",
     "build:lint": "tslint --config tslint.json --format stylish 'src/**/*.ts' --project .",
     "build:setup": "ncp src/ tmp/ && ncp tools/ngfactory/ tmp/",
