--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "license": "MIT",
@@ -12,29 +12,27 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@angular/common": "5.2.3",
-    "@angular/core": "5.2.3",
-    "@angular/forms": "5.2.3",
-    "@angular/http": "5.2.3",
-    "@angular/platform-browser": "5.2.3",
-    "@angular/platform-browser-dynamic": "5.2.3",
+    "@angular/common": "5.2.4",
+    "@angular/core": "5.2.4",
+    "@angular/forms": "5.2.4",
+    "@angular/http": "5.2.4",
+    "@angular/platform-browser": "5.2.4",
+    "@angular/platform-browser-dynamic": "5.2.4",
     "core-js": "2.5.3",
     "rxjs": "5.5.6",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/compiler": "5.2.3",
-    "@angular/compiler-cli": "5.2.3",
+    "@angular/compiler": "5.2.4",
+    "@angular/compiler-cli": "5.2.4",
+    "@compodoc/compodoc": "1.0.5",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.35",
     "@types/googlemaps": "3.30.5",
     "@types/jquery": "3.3.0",
-    "babel-cli": "6.26.0",
-    "babel-preset-env": "1.6.1",
     "bootstrap-sass": "3.3.7",
-    "browserify": "15.2.0",
-    "command-line-args": "5.0.1",
-    "compodoc": "0.0.41",
+    "browserify": "16.0.0",
+    "command-line-args": "5.0.2",
     "concat-cli": "4.0.0",
     "convict": "4.0.2",
     "cpy-cli": "1.0.1",
@@ -42,7 +40,7 @@
     "html-minifier": "3.5.8",
     "jquery": "3.3.1",
     "jsonfile": "4.0.0",
-    "lodash": "4.17.4",
+    "lodash": "4.17.5",
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "node-rev": "2.0.0",
@@ -56,7 +54,7 @@
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.9.1",
     "typescript": "2.7.1",
-    "uglify-js": "3.3.9"
+    "uglify-js": "3.3.10"
   },
   "scripts": {
     "ncu:update": "ncu -u && npm update && npm update -D",
@@ -93,8 +91,7 @@
     "build:angular-compile": "ngc -p tsconfig.ngc.json",
     "build:typescript-compile": "tsc -p tsconfig.tsc.json",
     "build:rollup": "rollup -f iife -c rollup.config.js -o compiled/bundle.es2015.js",
-    "#build:es5": "tsc --target es5 --allowJs true compiled/bundle.es2015.js --out compiled/bundle.es5.js",
-    "build:es5": "babel compiled/bundle.es2015.js --presets env --out-file compiled/bundle.es5.js",
+    "build:es5": "tsc --target es5 --allowJs true compiled/bundle.es2015.js --out compiled/bundle.es5.js",
     "build:concat-js": "concat-cli -f node_modules/jquery/dist/jquery.min.js node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js tmp/assets/js/modernizr.custom.js tmp/assets/js/jquery.gridrotator.js tmp/assets/js/stick.up.js tmp/assets/js/jquery.easypiechart.js tmp/assets/js/google-analytics.js tmp/assets/js/pre-render.js -o compiled/bundle.deps.js",
     "build:concat-css": "concat-cli -f tmp/assets/css/layout.css -o compiled/common.min.css",
     "build:minify": "npm-run-all build:minify:*",
