Experiment with offline app.

--- a/package.json
+++ b/package.json
@@ -87,16 +87,18 @@
     "build:render:sitemap": "node tools/compile --source tmp/sitemap.xml --context config/config.json --output tmp/sitemap.xml",
     "build:render:footer": "node tools/compile --source tmp/footer/components/footer.htm --context config/config.json --output tmp/footer/components/footer.htm",
     "build:render:google-analytics": "node tools/compile --source tmp/assets/js/google-analytics.js --context config/config.json --output tmp/assets/js/google-analytics.js",
+    "build:render:sw": "node tools/compile --source tmp/sw.js --context config/config.json --output tmp/sw.js",
     "build:html-min-templates": "html-minifier --case-sensitive --collapse-whitespace --remove-comments --minify-css --minify-js --input-dir tmp --output-dir tmp --file-ext htm",
     "build:angular-compile": "ngc -p tsconfig.ngc.json",
     "build:typescript-compile": "tsc -p tsconfig.tsc.json",
     "build:rollup": "rollup -f iife -c rollup.config.js -o compiled/bundle.es2015.js",
     "build:es5": "tsc --target es5 --allowJs true compiled/bundle.es2015.js --out compiled/bundle.es5.js",
-    "build:concat-js": "concat-cli -f node_modules/jquery/dist/jquery.min.js node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js tmp/assets/js/modernizr.custom.js tmp/assets/js/jquery.gridrotator.js tmp/assets/js/stick.up.js tmp/assets/js/jquery.easypiechart.js tmp/assets/js/google-analytics.js tmp/assets/js/pre-render.js -o compiled/bundle.deps.js",
+    "build:concat-js": "concat-cli -f node_modules/jquery/dist/jquery.min.js node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js tmp/assets/js/modernizr.custom.js tmp/assets/js/jquery.gridrotator.js tmp/assets/js/stick.up.js tmp/assets/js/jquery.easypiechart.js tmp/assets/js/google-analytics.js tmp/assets/js/pre-render.js tmp/assets/js/service-worker.js -o compiled/bundle.deps.js",
     "build:concat-css": "concat-cli -f tmp/assets/css/layout.css -o compiled/common.min.css",
     "build:minify": "npm-run-all build:minify:*",
     "build:minify:bundle-deps": "uglifyjs compiled/bundle.deps.js --screw-ie8 --compress properties,dead_code,conditionals,unused,join_vars --mangle toplevel --comments --output compiled/bundle.deps.min.js",
     "build:minify:bundle-es5": "uglifyjs compiled/bundle.es5.js --screw-ie8 --compress properties,dead_code,conditionals,unused,join_vars --mangle toplevel --comments --output compiled/bundle.es5.min.js",
+    "build:minify:sw": "uglifyjs tmp/sw.js --screw-ie8 --compress properties,dead_code,conditionals,unused,join_vars --mangle toplevel --comments --output dist/sw.js",
     "build:rev": "npm-run-all build:rev:*",
     "build:rev:js": "nodeRev 'compiled/*.min.js' --hash -o dist/js",
     "build:rev:css": "nodeRev 'compiled/common.min.css' --hash -o dist/css",
