Add webp images

--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@angular/common": "5.2.4",
-    "@angular/core": "5.2.4",
-    "@angular/forms": "5.2.4",
-    "@angular/http": "5.2.4",
-    "@angular/platform-browser": "5.2.4",
-    "@angular/platform-browser-dynamic": "5.2.4",
+    "@angular/common": "5.2.5",
+    "@angular/core": "5.2.5",
+    "@angular/forms": "5.2.5",
+    "@angular/http": "5.2.5",
+    "@angular/platform-browser": "5.2.5",
+    "@angular/platform-browser-dynamic": "5.2.5",
     "core-js": "2.5.3",
     "rxjs": "5.5.6",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/compiler": "5.2.4",
-    "@angular/compiler-cli": "5.2.4",
+    "@angular/compiler": "5.2.5",
+    "@angular/compiler-cli": "5.2.5",
     "@compodoc/compodoc": "1.0.6",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.35",
-    "@types/googlemaps": "3.30.6",
+    "@types/googlemaps": "3.30.7",
     "@types/jquery": "3.3.0",
     "bootstrap-sass": "3.3.7",
     "browserify": "16.1.0",
@@ -103,7 +103,7 @@
     "build:rev:js": "nodeRev 'compiled/*.min.js' --hash -o dist/js",
     "build:rev:css": "nodeRev 'compiled/common.min.css' --hash -o dist/css",
     "build:assets": "npm-run-all build:assets:*",
-    "build:assets:images": "mkdirp dist/assets/images && ncp src/assets/images dist/assets/images",
+    "build:assets:images": "mkdirp dist/assets/images && mkdirp dist/assets/webp && ncp src/assets/images dist/assets/images && ncp src/assets/webp dist/assets/webp",
     "build:assets:static": "cpy 'tmp/*.html' 'tmp/*.ico' 'tmp/manifest.json' 'tmp/*.txt' 'tmp/*.xml' dist && cpy 'README.md' heroku",
     "build:assets:fonts": "mkdirp dist/fonts && ncp src/assets/fonts dist/fonts",
     "build:inject": "postbuild -i tmp/index.html -o dist/index.html -c dist/css -j dist/js -g dist/",
