--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.18.2",
-    "cache-manager": "2.6.0",
+    "cache-manager": "2.7.0",
     "camelcase": "4.1.0",
     "compression": "1.7.1",
     "convict": "4.0.2",
@@ -39,6 +39,7 @@
     "prerender-node": "2.7.4",
     "referrer-policy": "1.1.0",
     "require-directory": "2.1.1",
+    "serve-webp": "1.0.0",
     "sharp": "0.19.0"
   },
   "devDependencies": {
