--- a/package.json
+++ b/package.json
@@ -8,30 +8,30 @@
     "url": "https://github.com/ouq77/portfolio-web"
   },
   "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+    "node": ">=10",
+    "npm": ">=6"
   },
   "dependencies": {
-    "@angular/common": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "core-js": "2.5.5",
-    "rxjs": "5.5.10",
+    "@angular/common": "6.0.1",
+    "@angular/core": "6.0.1",
+    "@angular/forms": "6.0.1",
+    "@angular/http": "6.0.1",
+    "@angular/platform-browser": "6.0.1",
+    "@angular/platform-browser-dynamic": "6.0.1",
+    "core-js": "2.5.6",
+    "rxjs": "6.1.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
+    "@angular/compiler": "6.0.1",
+    "@angular/compiler-cli": "6.0.1",
     "@compodoc/compodoc": "1.1.2",
     "@types/dateformat": "1.0.1",
-    "@types/es6-shim": "0.31.36",
+    "@types/es6-shim": "0.31.37",
     "@types/googlemaps": "3.30.8",
     "@types/jquery": "3.3.1",
     "bootstrap-sass": "3.3.7",
-    "browserify": "16.2.0",
+    "browserify": "16.2.2",
     "command-line-args": "5.0.2",
     "concat-cli": "4.0.0",
     "convict": "4.2.0",
@@ -44,17 +44,17 @@
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "node-rev": "2.0.0",
-    "node-sass": "4.8.3",
-    "npm-run-all": "4.1.2",
+    "node-sass": "4.9.0",
+    "npm-run-all": "4.1.3",
     "npmversion": "1.6.2",
     "postbuild": "2.1.0",
     "rimraf": "2.6.2",
     "rollup": "0.58.2",
-    "rollup-plugin-commonjs": "9.1.0",
+    "rollup-plugin-commonjs": "9.1.3",
     "rollup-plugin-node-resolve-angular": "2.0.3",
-    "tslint": "5.9.1",
-    "typescript": "2.8.3",
-    "uglify-js": "3.3.22"
+    "tslint": "5.10.0",
+    "typescript": "2.7.2",
+    "uglify-js": "3.3.24"
   },
   "scripts": {
     "ncu:update": "ncu -u && npm update && npm update -D",
@@ -91,7 +91,7 @@
     "build:html-min-templates": "html-minifier --case-sensitive --collapse-whitespace --remove-comments --minify-css --minify-js --input-dir tmp --output-dir tmp --file-ext htm",
     "build:angular-compile": "ngc -p tsconfig.ngc.json",
     "build:typescript-compile": "tsc -p tsconfig.tsc.json",
-    "build:rollup": "rollup -f iife -c rollup.config.js -o compiled/bundle.es2015.js",
+    "build:rollup": "rollup -c rollup.config.js",
     "build:es5": "tsc --target es5 --allowJs true compiled/bundle.es2015.js --out compiled/bundle.es5.js",
     "build:concat-js": "concat-cli -f node_modules/jquery/dist/jquery.min.js node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js tmp/assets/js/modernizr.custom.js tmp/assets/js/jquery.gridrotator.js tmp/assets/js/stick.up.js tmp/assets/js/jquery.easypiechart.js tmp/assets/js/google-analytics.js tmp/assets/js/pre-render.js tmp/assets/js/service-worker.js -o compiled/bundle.deps.js",
     "build:concat-css": "concat-cli -f tmp/assets/css/layout.css -o compiled/common.min.css",
