--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "@angular/common": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/forms": "6.0.1",
-    "@angular/http": "6.0.1",
-    "@angular/platform-browser": "6.0.1",
-    "@angular/platform-browser-dynamic": "6.0.1",
+    "@angular/common": "6.0.3",
+    "@angular/core": "6.0.3",
+    "@angular/forms": "6.0.3",
+    "@angular/http": "6.0.3",
+    "@angular/platform-browser": "6.0.3",
+    "@angular/platform-browser-dynamic": "6.0.3",
     "core-js": "2.5.6",
-    "rxjs": "6.1.0",
+    "rxjs": "6.2.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler": "6.0.1",
-    "@angular/compiler-cli": "6.0.1",
-    "@compodoc/compodoc": "1.1.2",
+    "@angular/compiler": "6.0.3",
+    "@angular/compiler-cli": "6.0.3",
+    "@compodoc/compodoc": "1.1.3",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.37",
     "@types/googlemaps": "3.30.8",
-    "@types/jquery": "3.3.1",
+    "@types/jquery": "3.3.2",
+    "@types/node": "8.10.17",
     "bootstrap-sass": "3.3.7",
     "browserify": "16.2.2",
     "command-line-args": "5.0.2",
@@ -37,7 +38,7 @@
     "convict": "4.2.0",
     "cpy-cli": "1.0.1",
     "dateformat": "3.0.3",
-    "html-minifier": "3.5.15",
+    "html-minifier": "3.5.16",
     "jquery": "3.3.1",
     "jsonfile": "4.0.0",
     "lodash": "4.17.10",
@@ -49,12 +50,12 @@
     "npmversion": "1.6.2",
     "postbuild": "2.1.0",
     "rimraf": "2.6.2",
-    "rollup": "0.58.2",
+    "rollup": "0.59.2",
     "rollup-plugin-commonjs": "9.1.3",
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.10.0",
     "typescript": "2.7.2",
-    "uglify-js": "3.3.24"
+    "uglify-js": "3.3.27"
   },
   "scripts": {
     "ncu:update": "ncu -u && npm update && npm update -D",
