Updated dependencies. Updated experience

--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "@angular/common": "6.0.9",
-    "@angular/core": "6.0.9",
-    "@angular/forms": "6.0.9",
-    "@angular/http": "6.0.9",
-    "@angular/platform-browser": "6.0.9",
-    "@angular/platform-browser-dynamic": "6.0.9",
+    "@angular/common": "6.1.3",
+    "@angular/core": "6.1.3",
+    "@angular/forms": "6.1.3",
+    "@angular/http": "6.1.3",
+    "@angular/platform-browser": "6.1.3",
+    "@angular/platform-browser-dynamic": "6.1.3",
     "core-js": "2.5.7",
     "rxjs": "6.2.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler": "6.0.9",
-    "@angular/compiler-cli": "6.0.9",
+    "@angular/compiler": "6.1.3",
+    "@angular/compiler-cli": "6.1.3",
     "@compodoc/compodoc": "1.1.3",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.37",
     "@types/googlemaps": "3.30.11",
-    "@types/jquery": "3.3.5",
-    "@types/node": "10.5.2",
+    "@types/jquery": "3.3.6",
+    "@types/node": "10.7.1",
     "bootstrap-sass": "3.3.7",
     "browserify": "16.2.2",
     "command-line-args": "5.0.2",
@@ -38,45 +38,27 @@
     "convict": "4.3.2",
     "cpy-cli": "2.0.0",
     "dateformat": "3.0.3",
-    "html-minifier": "3.5.19",
+    "html-minifier": "3.5.20",
     "jquery": "3.3.1",
     "jsonfile": "4.0.0",
     "lodash": "4.17.10",
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "node-rev": "2.0.0",
-    "node-sass": "4.9.2",
+    "node-sass": "4.9.3",
     "npm-run-all": "4.1.3",
     "npmversion": "1.7.0",
     "postbuild": "2.1.0",
     "rimraf": "2.6.2",
-    "rollup": "0.63.4",
-    "rollup-plugin-commonjs": "9.1.3",
+    "rollup": "0.64.1",
+    "rollup-plugin-commonjs": "9.1.5",
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.11.0",
-    "typescript": "2.7.2",
-    "uglify-js": "3.4.5"
+    "typescript": "2.9.2",
+    "uglify-js": "3.4.7"
   },
   "scripts": {
-    "ncu:update": "ncu -u && npm update && npm update -D",
-    "postinstall": "npm prune",
     "reinstall": "npm cache clean && rimraf node_modules/* && npm install",
-    "clean": "npm-run-all clean:*",
-    "clean:compiled": "rimraf compiled/*",
-    "clean:temp": "rimraf tmp/*",
-    "clean:dist": "rimraf dist/*",
-    "heroku:all": "npm-run-all heroku:build heroku:docs",
-    "heroku:build": "npm-run-all build heroku:clean heroku:build:*",
-    "heroku:build:copy": "ncp dist heroku/app",
-    "heroku:clean": "npm-run-all heroku:clean:*",
-    "heroku:clean:assets": "rimraf heroku/app/assets/images/*.* heroku/app/assets/images/manifesticons heroku/app/assets/images/touchicons",
-    "heroku:clean:css": "rimraf heroku/app/css",
-    "heroku:clean:fonts": "rimraf heroku/app/fonts",
-    "heroku:clean:js": "rimraf heroku/app/js",
-    "heroku:clean:files": "rimraf heroku/app/*.html heroku/app/*.ico heroku/app/*.json heroku/app/*.txt heroku/app/*.xml",
-    "heroku:docs": "npm-run-all heroku:docs:*",
-    "heroku:docs:clean": "rimraf heroku/app/docs/*",
-    "heroku:docs:compile": "compodoc --tsconfig tsconfig.json --theme laravel --silent --name 'Louw Swart // Portfolio' --output heroku/app/docs/",
     "build": "npm-run-all clean build:*",
     "build:lint": "tslint --config tslint.json --format stylish 'src/**/*.ts' --project .",
     "build:setup": "ncp src/ tmp/ && ncp tools/ngfactory/ tmp/",
@@ -117,6 +99,24 @@
     "bump:patch:src": "npmversion --increment patch",
     "bump:major:heroku": "cd heroku && npmversion --increment major --nogit-tag",
     "bump:minor:heroku": "cd heroku && npmversion --increment minor --nogit-tag",
-    "bump:patch:heroku": "cd heroku && npmversion --increment patch --nogit-tag"
+    "bump:patch:heroku": "cd heroku && npmversion --increment patch --nogit-tag",
+    "clean": "npm-run-all clean:*",
+    "clean:compiled": "rimraf compiled/*",
+    "clean:temp": "rimraf tmp/*",
+    "clean:dist": "rimraf dist/*",
+    "heroku:all": "npm-run-all heroku:build heroku:docs",
+    "heroku:build": "npm-run-all build heroku:clean heroku:build:*",
+    "heroku:build:copy": "ncp dist heroku/app",
+    "heroku:clean": "npm-run-all heroku:clean:*",
+    "heroku:clean:assets": "rimraf heroku/app/assets/images/*.* heroku/app/assets/images/manifesticons heroku/app/assets/images/touchicons",
+    "heroku:clean:css": "rimraf heroku/app/css",
+    "heroku:clean:fonts": "rimraf heroku/app/fonts",
+    "heroku:clean:js": "rimraf heroku/app/js",
+    "heroku:clean:files": "rimraf heroku/app/*.html heroku/app/*.ico heroku/app/*.json heroku/app/*.txt heroku/app/*.xml",
+    "heroku:docs": "npm-run-all heroku:docs:*",
+    "heroku:docs:clean": "rimraf heroku/app/docs/*",
+    "heroku:docs:compile": "compodoc --tsconfig tsconfig.json --theme laravel --silent --name 'Louw Swart // Portfolio' --output heroku/app/docs/",
+    "ncu:update": "ncu -u && npm update && npm update -D",
+    "postinstall": "npm prune"
   }
 }
