--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "7.0.0",
+  "version": "7.0.1",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "license": "MIT",
@@ -25,12 +25,12 @@
   "devDependencies": {
     "@angular/compiler": "7.0.1",
     "@angular/compiler-cli": "7.0.1",
-    "@compodoc/compodoc": "1.1.5",
+    "@compodoc/compodoc": "1.1.6",
     "@types/dateformat": "1.0.1",
     "@types/es6-shim": "0.31.37",
     "@types/googlemaps": "3.30.16",
     "@types/jquery": "3.3.22",
-    "@types/node": "10.12.0",
+    "@types/node": "10.12.1",
     "bootstrap-sass": "3.3.7",
     "browserify": "16.2.3",
     "command-line-args": "5.0.2",
@@ -46,6 +46,7 @@
     "ncp": "2.0.0",
     "node-rev": "2.0.0",
     "node-sass": "4.9.4",
+    "npm-force-resolutions": "0.0.2",
     "npm-run-all": "4.1.3",
     "npmversion": "1.7.0",
     "postbuild": "2.1.0",
@@ -54,8 +55,11 @@
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.11.0",
-    "typescript": "3.1.3",
+    "typescript": "3.1.4",
     "uglify-js": "3.4.9"
+  },
+  "resolutions": {
+    "debug": "4.1.0"
   },
   "scripts": {
     "reinstall": "npm cache clean && rimraf node_modules/* && npm install",
