--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "7.0.1",
+  "version": "7.0.2",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "license": "MIT",
@@ -8,29 +8,29 @@
     "url": "https://github.com/ouq77/portfolio-web"
   },
   "engines": {
-    "node": ">=10",
-    "npm": ">=6"
+    "node": "11",
+    "npm": "6"
   },
   "dependencies": {
-    "@angular/common": "7.0.1",
-    "@angular/core": "7.0.1",
-    "@angular/forms": "7.0.1",
-    "@angular/http": "7.0.1",
-    "@angular/platform-browser": "7.0.1",
-    "@angular/platform-browser-dynamic": "7.0.1",
+    "@angular/common": "7.0.3",
+    "@angular/core": "7.0.3",
+    "@angular/forms": "7.0.3",
+    "@angular/http": "7.0.3",
+    "@angular/platform-browser": "7.0.3",
+    "@angular/platform-browser-dynamic": "7.0.3",
     "core-js": "2.5.7",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler": "7.0.1",
-    "@angular/compiler-cli": "7.0.1",
+    "@angular/compiler": "7.0.3",
+    "@angular/compiler-cli": "7.0.3",
     "@compodoc/compodoc": "1.1.6",
     "@types/dateformat": "1.0.1",
-    "@types/es6-shim": "0.31.37",
+    "@types/es6-shim": "0.31.39",
     "@types/googlemaps": "3.30.16",
     "@types/jquery": "3.3.22",
-    "@types/node": "10.12.1",
+    "@types/node": "10.12.5",
     "bootstrap-sass": "3.3.7",
     "browserify": "16.2.3",
     "command-line-args": "5.0.2",
@@ -45,17 +45,17 @@
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "node-rev": "2.0.0",
-    "node-sass": "4.9.4",
+    "node-sass": "4.10.0",
     "npm-force-resolutions": "0.0.2",
     "npm-run-all": "4.1.3",
     "npmversion": "1.7.0",
     "postbuild": "2.1.0",
     "rimraf": "2.6.2",
-    "rollup": "0.66.6",
+    "rollup": "0.67.0",
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-node-resolve-angular": "2.0.3",
     "tslint": "5.11.0",
-    "typescript": "3.1.4",
+    "typescript": "3.1.6",
     "uglify-js": "3.4.9"
   },
   "resolutions": {
