--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "7.0.10",
+  "version": "7.1.0",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart, based on 'angular2-seed'",
   "license": "MIT",
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@angular/compiler": "7.2.2",
     "@angular/compiler-cli": "7.2.2",
-    "@compodoc/compodoc": "1.1.7",
+    "@compodoc/compodoc": "1.1.5",
     "@types/dateformat": "3.0.0",
     "@types/es6-shim": "0.31.39",
     "@types/googlemaps": "3.30.16",
@@ -75,6 +75,7 @@
     "build:render:footer": "node tools/compile --source tmp/footer/components/footer.htm --context config/config.json --output tmp/footer/components/footer.htm",
     "build:render:google-analytics": "node tools/compile --source tmp/assets/js/google-analytics.js --context config/config.json --output tmp/assets/js/google-analytics.js",
     "build:render:sw": "node tools/compile --source tmp/sw.js --context config/config.json --output tmp/sw.js",
+    "build:render:service-worker": "node tools/compile --source tmp/assets/js/service-worker.js --context config/config.json --output tmp/assets/js/service-worker.js",
     "build:html-min-templates": "html-minifier --case-sensitive --collapse-whitespace --remove-comments --minify-css --minify-js --input-dir tmp --output-dir tmp --file-ext htm",
     "build:angular-compile": "ngc -p tsconfig.ngc.json",
     "build:typescript-compile": "tsc -p tsconfig.tsc.json",
@@ -91,8 +92,9 @@
     "build:rev:css": "nodeRev 'compiled/common.min.css' --hash -o dist/css",
     "build:assets": "npm-run-all build:assets:*",
     "build:assets:images": "mkdirp dist/assets/images && mkdirp dist/assets/webp && ncp src/assets/images dist/assets/images && ncp src/assets/webp dist/assets/webp",
-    "build:assets:static": "cpy 'tmp/*.html' 'tmp/*.ico' 'tmp/manifest.json' 'tmp/*.txt' 'tmp/*.xml' dist && cpy 'README.md' heroku",
     "build:assets:fonts": "mkdirp dist/fonts && ncp src/assets/fonts dist/fonts",
+    "build:assets:markers": "mkdirp dist/markers && ncp src/assets/markers dist/markers",
+    "build:assets:static": "cpy 'tmp/*.html' 'tmp/*.ico' 'tmp/manifest.json' 'tmp/*.txt' 'tmp/*.xml' dist && cpy 'README.md' heroku",
     "build:inject": "postbuild -i tmp/index.html -o dist/index.html -c dist/css -j dist/js -g dist/",
     "build:html-min-final": "html-minifier --case-sensitive --collapse-whitespace --remove-comments --minify-css --minify-js --input-dir dist --output-dir dist --file-ext html",
     "bump:major": "npm-run-all bump:major:*",
