--- a/tsconfig.tsc.json
+++ b/tsconfig.tsc.json
@@ -22,6 +22,7 @@
     "outDir": "compiled",
     "pretty": true,
     "removeComments": true,
+    "skipLibCheck": true,
     "sourceMap": false,
     "target": "es2015",
     "typeRoots": [
