--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "helmet-csp": "2.7.1",
     "hpkp": "2.0.0",
     "hsts": "2.2.0",
-    "netjet": "1.3.0",
+    "netjet": "ouq77/netjet#exclude-options",
     "node-fetch": "2.6.0",
     "nodemailer": "6.2.1",
     "ord": "1.0.1",
