--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "8.2.1",
+  "version": "8.2.2",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "build:compile": "ng build --prod",
     "build:render": "node tools/template-compile -s 'index.html|exclude.html|sitemap.xml|sw.js|scripts.*.js|main-*.js' -c config/config.json",
     "build:html-min-templates": "html-minifier --case-sensitive --collapse-whitespace --remove-comments --minify-css --minify-js --input-dir dist --output-dir dist --file-ext html",
+    "build:uglify-js": "uglifyjs dist/sw.js --compress --output dist/sw.js",
     "bump:major": "npm-run-all bump:major:*",
     "bump:minor": "npm-run-all bump:minor:*",
     "bump:patch": "npm-run-all bump:patch:*",
@@ -45,14 +46,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.1",
-    "@angular/common": "8.0.1",
-    "@angular/compiler": "8.0.1",
-    "@angular/core": "8.0.1",
-    "@angular/forms": "8.0.1",
-    "@angular/platform-browser": "8.0.1",
-    "@angular/platform-browser-dynamic": "8.0.1",
-    "@angular/router": "8.0.1",
+    "@angular/animations": "8.0.2",
+    "@angular/common": "8.0.2",
+    "@angular/compiler": "8.0.2",
+    "@angular/core": "8.0.2",
+    "@angular/forms": "8.0.2",
+    "@angular/platform-browser": "8.0.2",
+    "@angular/platform-browser-dynamic": "8.0.2",
+    "@angular/router": "8.0.2",
     "rxjs": "6.5.2",
     "tslib": "1.10.0",
     "zone.js": "0.9.1"
@@ -61,13 +62,13 @@
     "@agm/core": "1.0.0-beta.6",
     "@angular-devkit/build-angular": "0.800.3",
     "@angular/cli": "8.0.3",
-    "@angular/compiler-cli": "8.0.1",
-    "@angular/language-service": "8.0.1",
+    "@angular/compiler-cli": "8.0.2",
+    "@angular/language-service": "8.0.2",
     "@compodoc/compodoc": "1.1.9",
     "@ngui/common": "0.6.0",
-    "@types/googlemaps": "3.36.4",
+    "@types/googlemaps": "3.36.5",
     "@types/jquery": "3.3.29",
-    "@types/node": "12.0.8",
+    "@types/node": "12.0.10",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "5.1.0",
@@ -86,7 +87,8 @@
     "npmversion": "1.7.0",
     "rimraf": "2.6.3",
     "ts-node": "8.3.0",
-    "tslint": "5.17.0",
-    "typescript": "3.4.5"
+    "tslint": "5.18.0",
+    "typescript": "3.4.5",
+    "uglify-js": "3.6.0"
   }
 }
