--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ouq77-portfolio",
   "author": "ouq77",
-  "version": "8.2.8",
+  "version": "8.2.9",
   "description": "On-line portfolio of Louw Swart",
   "main": "server/server.js",
   "repository": {
@@ -27,13 +27,13 @@
     "express-cache-headers": "0.1.4",
     "express-user-agent-blocker": "2.0.2",
     "forever-monitor": "1.7.1",
-    "helmet": "3.18.0",
+    "helmet": "3.19.0",
     "helmet-csp": "2.7.1",
     "hpkp": "2.0.0",
     "hsts": "2.2.0",
-    "netjet": "ouq77/netjet#exclude-options",
+    "netjet": "github:ouq77/netjet#exclude-options",
     "node-fetch": "2.6.0",
-    "nodemailer": "6.2.1",
+    "nodemailer": "6.3.0",
     "ord": "1.0.1",
     "referrer-policy": "1.2.0",
     "require-directory": "2.1.1",
@@ -41,7 +41,7 @@
     "webp-middleware": "0.4.0"
   },
   "devDependencies": {
-    "standard": "12.0.1"
+    "standard": "13.0.2"
   },
   "scripts": {
     "ncu:update": "ncu -u && npm update && npm update -D",
