--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "8.2.14",
+  "version": "8.2.15",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -42,31 +42,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.5",
-    "@angular/common": "8.2.5",
-    "@angular/compiler": "8.2.5",
-    "@angular/core": "8.2.5",
-    "@angular/forms": "8.2.5",
-    "@angular/platform-browser": "8.2.5",
-    "@angular/platform-browser-dynamic": "8.2.5",
-    "@angular/router": "8.2.5",
+    "@angular/animations": "8.2.7",
+    "@angular/common": "8.2.7",
+    "@angular/compiler": "8.2.7",
+    "@angular/core": "8.2.7",
+    "@angular/forms": "8.2.7",
+    "@angular/platform-browser": "8.2.7",
+    "@angular/platform-browser-dynamic": "8.2.7",
+    "@angular/router": "8.2.7",
     "rxjs": "6.5.3",
     "tslib": "1.10.0",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@agm/core": "1.0.0-beta.7",
-    "@angular-devkit/build-angular": "0.803.3",
-    "@angular/cli": "8.3.3",
-    "@angular/compiler-cli": "8.2.5",
-    "@angular/language-service": "8.2.5",
+    "@agm/core": "1.0.0",
+    "@angular-devkit/build-angular": "0.803.5",
+    "@angular/cli": "8.3.5",
+    "@angular/compiler-cli": "8.2.7",
+    "@angular/language-service": "8.2.7",
     "@ngui/common": "0.6.0",
-    "@types/googlemaps": "3.37.6",
+    "@types/googlemaps": "3.37.7",
     "@types/jquery": "3.3.31",
-    "@types/node": "12.7.4",
+    "@types/node": "12.7.5",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
-    "codelyzer": "5.1.0",
+    "codelyzer": "5.1.1",
     "command-line-args": "5.1.1",
     "convict": "5.1.0",
     "dateformat": "3.0.3",
@@ -81,8 +81,8 @@
     "npm-run-all": "4.1.5",
     "npmversion": "1.7.0",
     "rimraf": "3.0.0",
-    "ts-node": "8.3.0",
-    "tslint": "5.19.0",
+    "ts-node": "8.4.1",
+    "tslint": "5.20.0",
     "typescript": "3.5.3",
     "uglify-js": "3.6.0"
   }
