--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,22 +2,24 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
     "declaration": false,
-    "module": "esnext",
-    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "module": "esnext",
+    "lib": [
+      "es2018",
+      "dom"
+    ],
+    "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types",
       "tools/manual_typings"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
     ]
   }
 }
